--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,22 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  gap: 10px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 1.5em;
+}
+
+.label {
+  text-transform: uppercase;
+}
